sidebard overflow fix

--- a/frontend/src/sidebar/Sidebar.css
+++ b/frontend/src/sidebar/Sidebar.css
@@ -7,6 +7,7 @@
     left: 0;
     z-index: 1;
     transition: 0.3s;
+    overflow-x: hidden;
 }
 
 .sidebar.open {
